fix: remove dead parameter, dead import, and orphaned comment
- QuarkusForgeCli.runHeadlessSmoke: remove unused initialState and
  searchDebounceMs parameters (searchDebounceMs was only logged,
  initialState was never read)
- GenerationQueryBuilder: replace Collectors.toList() with .toList(),
  remove unused Collectors import
- HeadlessGenerationService: remove orphaned section separator comment